test/types/records/ferguson/choose-record/choose-record4.good
choose-record4.chpl:12: In function 'updateAndPrint':
choose-record4.chpl:14: error: illegal lvalue in assignment
choose-record4.chpl:15: error: illegal lvalue in assignment
